CARDS-1830: Creating forms via API ignores the requiredSubjectTypes setting
fix according to comments